src/components/messageCanvas/messageCanvas.css
.rustic-message-canvas {
  gap: 4px;
  position: relative;
}

.rustic-message-canvas .rustic-message-container {
  padding: 16px;
}

.rustic-message-canvas .rustic-message-actions-container {
  opacity: 0;
  position: absolute;
  top: 4px;
  right: 16px;
  display: flex;
  align-items: center;
}

.rustic-message-canvas .rustic-timestamp {
  margin-left: 16px;
  align-self: flex-end;
}

.rustic-message-canvas:hover .rustic-message-actions-container {
  opacity: 1;
}

@media (max-width: 900px) {
  .rustic-message-canvas .rustic-message-actions-container {
    bottom: -20px;
    top: unset;
  }

  .rustic-message-canvas .rustic-timestamp {
    display: flex;
    flex: 1;
    justify-content: flex-end;
  }
}

